[metadata]
name = pimms
version = attr:vaep.__version__
description = Imputing (MS-based prote-) omics data using self supervised deep learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RasmussenLab/pimms
author = Henry Webel
author_email = "Henry Webel" <henry.webel@cpr.ku.dk>
license = gpl-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GPL 3.0 LICENSE
    Intended Audience :: Proteomics
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
# package_dir =
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    pandas>=1.4
    plotly
    torch<2
    scikit-learn>=1.0
    scipy
    seaborn
    fastai
    omegaconf
    tqdm

[options.extras_require]
docs =
    sphinx
    sphinx-book-theme
    myst-parser


[options.packages.find]
# where = vaep
exclude =
    test*


######################
# Tool configuration #
######################

[flake8]
max-line-length = 120
aggressive = 2


[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = vaep
branch = True

[coverage:report]
show_missing = True
skip_covered = True
