[metadata]
name = pimms-learn
version = attr:vaep.__version__
description = Imputing (MS-based prote-) omics data using self supervised deep learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RasmussenLab/pimms
author = Henry Webel
author_email = "Henry Webel" <henry.webel@cpr.ku.dk>
license = gpl-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
# package_dir =
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    pandas
    plotly
    torch
    scikit-learn>=1.0
    scipy
    seaborn
    fastai
    omegaconf
    tqdm
    mrmr-selection
    pingouin

[options.extras_require]
docs =
    sphinx
    sphinx-book-theme
    myst-nb
    sphinx-new-tab-link!=0.2.2


[options.packages.find]
# where = vaep
exclude =
    test*

[options.entry_points]
console_scripts =
    pimms-setup-imputation-comparison = vaep.cmd_interface.setup_imp_cp_website:main

######################
# Tool configuration #
######################

[flake8]
max-line-length = 120
aggressive = 2


[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = vaep
branch = True

[coverage:report]
show_missing = True
skip_covered = True
