
[options.packages.find]
# where = vaep
exclude =
    test*
######################
# Tool configuration #
######################

[flake8]
max-line-length = 120
aggressive = 2


[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = vaep
branch = True

[coverage:report]
show_missing = True
skip_covered = True
